--- a/style/style.css
+++ b/style/style.css
@@ -2,21 +2,25 @@
 h1, h2, h3{
     margin:0px;
 }
-body{
-    background-image: url("images/background.webp");
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    flex-wrap: wrap;
-    height:98vh;
+
+::-webkit-scrollbar {
+    width: 0px;
 }
 
+html{
+    background-image: url("images/background.webp");
+    background-size: cover;
+    background-position: fixed;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+}
 .sideways{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
     padding:10px;
+    min-height:700px;
 }
 
 #items{
@@ -30,6 +34,8 @@ body{
     border: 2px black solid;
     border-radius: 20px;
     width:50%;
+    height:550px;
+    overflow-y:scroll;
     padding: 10px;
     text-align: justify;
     background-color: rgba(255, 255, 255, 0.863);
@@ -64,7 +70,9 @@ body{
 }
 
 footer{
-    align-self: end;
+    position: relative;
+    bottom:0px;
+    width:fit-content;
     padding:10px;
     border-radius: 20px;
     background-color: rgba(255, 162, 162, 0.753);
